# virto-apis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
common/: Cargo.toml
common/src/: lib.rs  query.rs
files/: Cargo.toml
files/src/: main.rs  models.rs  service.rs
files/src/storage/: mod.rs  s3.rs  storage.rs
files/src/utils/: buffered_bytes_stream.rs  mod.rs
merchant/: .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
merchant/migrations/: 20220112210511_setup_catalog.down.sql  20220112210511_setup_catalog.up.sql
merchant/src/: lib.rs  main.rs
merchant/src/catalog/: backend.rs  mod.rs  models.rs  service.rs
merchant/src/catalog/backend/: postgres.rs
merchant/src/utils/: jwt.rs  mod.rs  query.rs
merchant/tests/: catalog-postgres.rs  catalog.rs  mod.rs  utils.rs
merchant/tests/fixtures/: catalog.rs
server/: Cargo.toml
server/src/: main.rs
