[package]
edition = "2021"
name = "files"
version = "0.1.0"

[dependencies]
async-std = {version = "1.8.0", features = ["attributes"]}
async-trait = "0.1.52"
mime2ext = "0.1.52"
multer = "2.0.2"
nanoid = "0.4.0"
rust-s3 = {version = "0.31.0", default-features = false, features = ["with-async-std"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "1.9.2"
tempfile = "3.3.0"
tide = "0.16.0"

[dev-dependencies]
fake = "2.4"
