[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
tide = "0.16.0"
serde_json = "1.0"
serde = { version = "1.0" }
# sqlx = { version = "0.5", features = [ "runtime-async-std-rustls", "sqlite", "json", "migrate", "chrono"] }
sqlx = { version = "0.5", features = [ "runtime-async-std-rustls", "sqlite", "json", "migrate", "chrono"] }

merchant = { path = "../merchant" }
